# meteapi

./: .env  Cargo.toml
migrations/: 20241017140713_create_users_table.sql  20241017141202_create_posts_table.sql  20241017175713_add_user.sql
src/: lib.rs  main.rs
src/http/v1/: mod.rs
src/http/v1/controllers/: auth.rs  helloworld.rs  me.rs  mod.rs
src/http/v1/middlewares/: token.rs
src/http/v1/models/: auth.rs  client_context.rs  error.rs  hello_world.rs  jwt.rs  mod.rs  user.rs
src/http/v1/repositories/: mod.rs  user.rs
src/http/v1/routers/: auth.rs  helloworld.rs  me.rs  mod.rs
