[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio", "tls-native-tls"] }
thiserror = "1.0.64"
tokio = {version = "1.40.0", features = ["full"]}
