[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio",
    "tls-native-tls",
] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = {version = "0.6.1", features = ["cors"]}
